--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <h5 class="mb-3 text-primary">Destinations</h5>
-                                <a href="destination-tanzania.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Tanzania</a>
-                                <a href="destination-kenya.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kenya</a>
-                                <a href="destination-uganda.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Uganda</a>
+                                <a href="destination-tanzania.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Serengeti</a>
+                                <a href="destination-kenya.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Ngorongoro</a>
+                                <a href="destination-uganda.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Mount Kilimanjaro</a>
                                 <a href="destination-rwanda.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Rwanda</a>
                                 <a href="destination-southafrica.html" class="dropdown-item"><i class="fa fa-map-marker-alt text-primary me-2"></i>South Africa</a>
                             </div>
+                            
                             <div class="col-lg-6 d-flex align-items-center justify-content-center">
-                                <img src="img/logo.png" alt="African Destinations Map" class="img-fluid"> 
+                                <img src="img/twiga.jpg" alt="African Destinations Map" class="img-fluid"> 
                             </div>
                         </div>
                     </div>
