--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                 <a href="destination-tanzania.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Serengeti</a>
                                 <a href="destination-kenya.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Ngorongoro</a>
                                 <a href="destination-uganda.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Mount Kilimanjaro</a>
-                                <a href="destination-rwanda.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Rwanda</a>
-                                <a href="destination-southafrica.html" class="dropdown-item"><i class="fa fa-map-marker-alt text-primary me-2"></i>South Africa</a>
+                                <a href="destination-rwanda.html" class="dropdown-item mb-2"><i class="fa fa-map-marker-alt text-primary me-2"></i>Tarangire</a>
+                                <a href="destination-southafrica.html" class="dropdown-item"><i class="fa fa-map-marker-alt text-primary me-2"></i>Lake Manyara</a>
                             </div>
                             
                             <div class="col-lg-6 d-flex align-items-center justify-content-center">
