--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  <div class="container-fluid position-relative p-0">
     <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
         <a href="" class="navbar-brand p-0">
-            <img src="img/logo.png" alt="Tembea Africa Logo" width="100%">
+            <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="fa fa-bars"></span>
