update safar ,experince, destination

--- a/about.html
+++ b/about.html
@@ -216,7 +216,7 @@
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">Leading Tanzania Safari
                         Experts</h1>
                     <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Discover Gosheni Safaris: Premier Tanzania safari operator since 2009, offering unforgettable
+                        Discover Kilimora Tour: Premier Tanzania safari operator since 2009, offering unforgettable
                         experiences with award-winning service and local expertise.
                     </p>
                 </div>
@@ -238,7 +238,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About Us</h6>
-                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Gosheni Safaris</span></h1>
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Kilimora Tour</span></h1>
 
                     <p class="mb-4">
                         We are a well-established business founded in 2009 by Peter Robert (Managing Director) who
@@ -253,7 +253,7 @@
 
                     <h5 class="mb-3 text-primary">Local Tanzanian Safari Expertise</h5>
                     <p class="mb-4">
-                        Gosheni Safaris has grown into one of Africa’s premier safari operators. Our company combines a
+                        Kilimora Tour has grown into one of Africa’s premier safari operators. Our company combines a
                         wealth of firsthand experience with an unwavering commitment to excellence, ensuring that every
                         guest enjoys a truly unforgettable safari experience.
                     </p>
@@ -294,11 +294,11 @@
         <div class="container">
             <div class="mb-5">
                 <h2 class="fw-bold" style="font-size:42px;">
-                    <span style="border-left:5px solid #d4a017; padding-left:15px; color: #fff;">Why Travel With
+                    <span style="border-left:5px solid #d4a017; padding-left:15px; color: #4B2E18 ;">Why Travel With
                         Us?</span>
                 </h2>
-                <p style="font-size:18px; max-width:650px; color:#fff;">
-                    Discover authentic Africa with Gosheni Safaris – where every journey is
+                <p style="font-size:18px; max-width:650px; color:#4B2E18;">
+                    Discover authentic Africa with Kilimora Tour – where every journey is
                     crafted with passion and expertise.
                 </p>
             </div>
@@ -387,7 +387,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">Our Services
                     </h6>
-                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Gosheni Safaris distinguishes
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Kilimora Tour distinguishes
                             itself</span></h1>
                     <p class="mb-4">
                         With a fleet of over 50 self-owned vehicles, including 5 to 7-seater custom safari Land Cruisers
@@ -415,43 +415,139 @@
 
 
 
-    <!-- Guides Start -->
+    <!-- At Your Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">Our Guides</h6>
-                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Gosheni Safaris: At Your Service</span>
-                    </h1>
-                    <p class="mb-4">
-                        We have a powerhouse team of knowledgeable, friendly, and professional guides who are passionate
-                        about sharing the wonders of Tanzania with you. They are the heart and soul of our company.
-                    </p>
-                    <p class="mb-4">
-                        All our guides are:
-                    </p>
-                    <ul class="list-unstyled mb-4">
-                        <li class="mb-2"><i class="fa fa-check text-primary me-3"></i>Thoroughly briefed before every
-                            departure.</li>
-                        <li class="mb-2"><i class="fa fa-check text-primary me-3"></i>Experienced in operating our
-                            specially designed safari vehicles.</li>
-                        <li class="mb-2"><i class="fa fa-check text-primary me-3"></i>Skilled in wildlife tracking and
-                            behavior prediction.</li>
-                        <li class="mb-2"><i class="fa fa-check text-primary me-3"></i>Knowledgeable about the local
-                            flora, fauna, and culture.</li>
-                    </ul>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="#">Get to know our guides</a>
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">Experience</h6>
+                    <h1 class="mb-4">Kilimora Tour: At Your Service</h1>
+                    <p class="mb-4">Welcome to Kilimora Tour! We are a powerhouse team of dedicated sales
+                        professionals, customer service experts, and passionate employees, united by a shared goal:
+                        showcasing the beauty and wonders of Tanzania and Africa to the world. With our unwavering
+                        commitment to hospitality and personalized experiences, we're here to ensure your journey with
+                        us is nothing short of extraordinary.</p>
+                    <p class="mb-4">While some of our team members are based in Denmark, China, the USA, Philippines,
+                        and other parts of the world, here we share with you the kind faces of our Tanzania team.
+                        They're ready to welcome you with open arms and provide the unforgettable service that defines
+                        the spirit of Kilimora Tour.</p>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="position-relative h-100">
-                        <img class="img-fluid rounded w-100 h-100" src="img/pro1.jpg" alt="Safari Guide"
+                        <img class="img-fluid rounded w-100 h-100" src="img/ngoro22.jpeg" alt="Gosheni Team"
                             style="object-fit: cover;">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Guides End -->
+    <!-- At Your Service End -->
+
+    <!-- Meet Our Team Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-start wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">Team</h6>
+                <h1 class="mb-4">Meet Our Team</h1>
+                <p class="mb-5">Meet our diverse team, driven by passion, expertise, and dedication to crafting
+                    unforgettable travel experiences tailored just for you.</p>
+            </div>
+            <div class="row g-4">
+                <!-- Peter -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card border-0 shadow-sm h-100">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/pro1.jpg" alt="Peter"
+                                style="height: 250px; object-fit: cover;">
+                        </div>
+                        <div class="card-body p-4">
+                            <h5 class="mb-1">Peter</h5>
+                            <p class="card-text small">As Director of Kilimora Tour, his goal is to make sure that
+                                tour guides deliver successfully. Peter enjoys the travel business as it allows him to
+                                share experiences, points of views and ideas.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Merlin -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="card border-0 shadow-sm h-100">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/pro2.jpg" alt="Merlin"
+                                style="height: 250px; object-fit: cover;">
+                        </div>
+                        <div class="card-body p-4">
+                            <h5 class="mb-1">Merlin</h5>
+                            <p class="card-text small">Merlin handles sales. She loves the outdoors and a big fan of
+                                nature. She is loved by our guests for her attentiveness in dealing with customers, fast
+                                responses, and eagerness to help at all times.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Lidya -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="card border-0 shadow-sm h-100">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/pro3.jpg" alt="Lidya"
+                                style="height: 250px; object-fit: cover;">
+                        </div>
+                        <div class="card-body p-4">
+                            <h5 class="mb-1">Lidya</h5>
+                            <p class="card-text small">Linda handles reservations. She is dedicated and loved by her
+                                clients and co-workers. She is very enthusiastic and engaging and goes out of her way to
+                                ensure that clients get the best safari experience.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Margreth -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card border-0 shadow-sm h-100">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/pro5.jpg" alt="Margreth"
+                                style="height: 250px; object-fit: cover;">
+                        </div>
+                        <div class="card-body p-4">
+                            <h5 class="mb-1">Margreth</h5>
+                            <p class="card-text small">Margreth is a born leader and very organized. Her clients love
+                                her for being able to find out what they need before they do! Very well commented on
+                                Trip Advisor.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- William -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="card border-0 shadow-sm h-100">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/pro1.jpg" alt="William"
+                                style="height: 250px; object-fit: cover;">
+                        </div>
+                        <div class="card-body p-4">
+                            <h5 class="mb-1">William</h5>
+                            <p class="card-text small">William is a crowd favorite. Trip Advisor reviews almost never
+                                fails to mention him. Guests are impressed with his attention to details and expertise.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Herman -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="card border-0 shadow-sm h-100">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/pro2.jpg" alt="Herman"
+                                style="height: 250px; object-fit: cover;">
+                        </div>
+                        <div class="card-body p-4">
+                            <h5 class="mb-1">Herman</h5>
+                            <p class="card-text small">Herman lights up every room with his sense of humor and light
+                                personality. He likes to have small chats and he goes a long way to ensure that you
+                                enjoy your stay.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- Meet Our Team End -->
 
     <!-- Vehicles Start -->
     <div class="container-xxl py-5 bg-light">
@@ -726,7 +822,7 @@
             </div>
 
             <div class="text-center mt-4 py-3" style="color:#777;">
-                © 2025 Gosheni Safaris — All Rights Reserved
+                © 2025 Kilimora Tour — All Rights Reserved
             </div>
 
         </div>
