--- a/destination-terangile.html
+++ b/destination-terangile.html
@@ -258,11 +258,11 @@
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
-                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
+                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">TERANGILE
                         DESTINATIONS</h6>
-                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">SERENGETI</h1>
+                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">TERANGILE</h1>
                     <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Experience Serenegeti, where the Great Migration roams wild, the sands of Zanzibar beckon, and
+                        Experience Terangile, where the Great Migration roams wild, the sands of Zanzibar beckon, and
                         the
                         majestic Mount Kilimanjaro rises above it all.
                     </p>
@@ -490,7 +490,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/ngo.jpg" class="img-fluid rounded main-img" alt="Ngorongoro Crater">
-
+                    <img src="img/ngoro22.jpeg" class="img-fluid rounded small-img shadow-lg" alt="Ngorongoro View">
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Ngorongoro Crater</h3>
@@ -508,7 +508,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/treelion.jpg" class="img-fluid rounded main-img" alt="Tree Climbing Lions">
-
+                    <img src="img/destination-4.jpg" class="img-fluid rounded small-img shadow-lg" alt="Lake Manyara">
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Lake Manyara</h3>
@@ -526,7 +526,7 @@
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
                     <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
-
+                    <img src="img/tembo.jpg" class="img-fluid rounded small-img shadow-lg" alt="Baobab Area">
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Tarangire National Park</h3>
@@ -544,7 +544,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
                     <img src="img/beach.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
-
+                    <img src="img/kili.jpg" class="img-fluid rounded small-img shadow-lg" alt="Stone Town">
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Zanzibar Island</h3>
@@ -626,128 +626,82 @@
     </div>
 
     <!-- Footer Start -->
-    <!-- FOOTER START -->
-    <footer class="pt-5" style="background:#fff; color:#000;">
-
-        <div class="container">
-
-            <!-- TOP ROW LINKS -->
-            <div class="row gy-4">
-
-                <!-- About -->
-                <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">About Gosheni</h5>
-                    <ul class="list-unstyled footer-list">
-                        <li><a href="#">Why Book with Gosheni</a></li>
-                        <li><a href="#">Our Guides</a></li>
-                        <li><a href="#">Our Vehicles</a></li>
-                        <li><a href="#">See All Tours</a></li>
-                        <li><a href="#">Gosheni Foundation</a></li>
-                        <li><a href="#">Gosheni DMC Tanzania</a></li>
-                    </ul>
-                    <!-- <img src="img/logo.png" style="width:160px; margin-top:10px;"> -->
+    <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Company</h4>
+                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="">FAQs & Help</a>
                 </div>
-
-                <!-- Destinations -->
-                <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">Top Destinations</h5>
-
-                    <ul class="list-unstyled footer-list">
-                        <li><a href="#">Serengeti</a></li>
-                        <li><a href="#">Ngorongoro</a></li>
-                        <li><a href="#">Mount Kilimanjaro</a></li>
-                        <li><a href="#">Tarangire</a></li>
-                        <li><a href="#">Lake Manyara</a></li>
-                        <li><a href="#">Mikumi National Park</a></li>
-
-                    </ul>
-                </div>
-
-                <!-- Experiences -->
-                <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">Top Experiences</h5>
-                    <ul class="list-unstyled footer-list">
-                        <li><a href="#">Tanzania Safari</a></li>
-                        <li><a href="#">Great Migration</a></li>
-                        <li><a href="#">Zanzibar</a></li>
-                        <li><a href="#">Mt. Kilimanjaro</a></li>
-                    </ul>
-                </div>
-
-                <!-- Booking Resource -->
-                <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">Booking Resource</h5>
-                    <ul class="list-unstyled footer-list">
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Payment and Terms</a></li>
-                        <li><a href="#">Blog</a></li>
-                    </ul>
-                </div>
-
-                <!-- Useful Information -->
-                <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">Useful Information</h5>
-                    <ul class="list-unstyled footer-list">
-                        <li><a href="#">Health Entry Details TZ</a></li>
-                        <li><a href="#">Safari Packing List</a></li>
-                        <li><a href="#">Pack for Kilimanjaro</a></li>
-                        <li><a href="#">Visa to Tanzania</a></li>
-                    </ul>
-                </div>
-
-                <!-- Newsletter -->
-                <div class="col-lg-2 col-md-6">
-                    <h5 class="fw-bold mb-3">Sign up for the Newsletter</h5>
-                    <form class="newsletter-form">
-                        <input type="email" class="form-control mb-2" placeholder="Email">
-                        <button class="btn w-100"
-                            style="background:#d4a017; color:#fff; font-weight:bold;">SUBSCRIBE</button>
-                    </form>
-                </div>
-
-            </div>
-
-            <!-- CONTACT ROW -->
-            <div class="row mt-5 gy-4">
-
-                <!-- Contact -->
-                <div class="col-lg-4">
-                    <h5 class="fw-bold mb-3">Contact</h5>
-                    <p><i class="fa fa-map-marker-alt me-2"></i>Arusha – Nairobi Road Sakina kwa Idd House no. 80 P.O
-                        Box 7337 Arusha, Tanzania</p>
-                </div>
-
-                <!-- Traveler Assistance -->
-                <div class="col-lg-4">
-                    <h5 class="fw-bold mb-3">Traveler Assistance</h5>
-                    <p><i class="fa fa-phone me-2"></i>+255 715 636 967 (EAT – UTC +3)</p>
-                    <p><i class="fa fa-phone me-2"></i>+256 767 828 384 (EAT – UTC +3)</p>
-                    <p><i class="fa fa-phone me-2"></i>+255 753 090 908 (PHT – UTC +8)</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@goshenisafaris.com</p>
-                </div>
-
-                <!-- Social Icons -->
-                <div class="col-lg-4">
-                    <h5 class="fw-bold mb-3">Follow Us</h5>
-                    <div class="d-flex gap-3 fs-4">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-x-twitter"></i></a>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Contact</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Arusha, Kilimanjaro, Tanzania</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255 784 554 555</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Gallery</h4>
+                    <div class="row g-2 pt-2">
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/package-2.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/package-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/package-1.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Newsletter</h4>
+                    <p>Subscribe for the latest updates and offers.</p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text"
+                            placeholder="Your email">
+                        <button type="button"
+                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                    </div>
+                </div>
             </div>
-
-            <div class="text-center mt-4 py-3" style="color:#777;">
-                © 2025 Gosheni Safaris — All Rights Reserved
-            </div>
-
         </div>
-    </footer>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a class="border-bottom" href="#">Gosheni Safaris</a>, All Right Reserved.
+                    </div>
+                    <div class="col-md-6 text-center text-md-end">
+                        <div class="footer-menu">
+                            <a href="">Home</a>
+                            <a href="">Cookies</a>
+                            <a href="">Help</a>
+                            <a href="">FQAs</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Footer End -->
 
     <!-- Back to Top -->
