--- a/about.html
+++ b/about.html
@@ -213,11 +213,9 @@
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
                     <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">DISCOVER THE
                         UNEXPECTED</h6>
-                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">Leading Tanzania Safari
-                        Experts</h1>
+                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">About Kilimora Tour</h1>
                     <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Discover Kilimora Tour: Premier Tanzania safari operator since 2009, offering unforgettable
-                        experiences with award-winning service and local expertise.
+                        Passionate team dedicated to unforgettable experiences and exceptional service..
                     </p>
                 </div>
             </div>
