--- a/destination-serengeti.html
+++ b/destination-serengeti.html
@@ -416,7 +416,7 @@
                 <!-- Tour Item 4 -->
                 <div class="package-item">
                     <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/photo1.jpeg" alt="">
+                        <img class="img-fluid" src="img/punda.jpg" alt="">
                     </div>
                     <div class="p-4">
                         <h5 class="mb-0">10 Days Exclusive Serengeti Safari</h5>
