--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/t2.jpg" alt=""
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/nyumbu.jpg" alt=""
                             style="object-fit: cover;">
                     </div>
                 </div>
@@ -285,7 +285,7 @@
 
                     <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About </h6>
 
-                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Gosheni Safari</span></h1>
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Kilimora Tour</span></h1>
 
                     <p class="mb-4">We are well-established business founded in 2009 by Peter Robert (Managing Director)
                         who worked as a tour guide and driver before founding the company. We are locally owned and
@@ -306,7 +306,7 @@
 
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/car.jpeg" alt=""
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/punda2.jpg" alt=""
                             style="object-fit: cover;">
                     </div>
                 </div>
@@ -335,7 +335,7 @@
                 <a href="#" class="filter-link" data-filter="great-migration">Great Migration</a>
                 <a href="#" class="filter-link" data-filter="kilimanjaro">Mt Kilimanjaro</a>
                 <a href="#" class="filter-link" data-filter="zanzibar">Zanzibar</a>
-                <a href="#" class="filter-link" data-filter="kruger">Kruger South Africa</a>
+                <a href="#" class="filter-link" data-filter="kruger">Wildlife Tour</a>
             </div>
 
 
@@ -349,12 +349,12 @@
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
-                            <span>📍 Tanzania</span>
+                            <span>📍 Tarangile</span>
                         </div>
 
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>10 Days Exclusive Serengeti Safari</h5>
+                            <h5>10 Days Exclusive Tarangile Safari</h5>
                             <p class="tour-tag">🏁 TARANGIRE, MANYARA, NGORONGORO, SERENGETI</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -363,16 +363,16 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/t4.jpg" class="tour-img" alt="Wildebeest River Crossing">
+                        <img src="img/chui9.jpg" class="tour-img" alt="Wildebeest River Crossing">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
-                            <span>📍 Tanzania</span>
+                            <span>📍 Wildlife Safaris</span>
                         </div>
 
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>10 Days Exclusive Serengeti Safari</h5>
+                            <h5>10 Days Exclusive Wildlife Safaris Safari</h5>
                             <p class="tour-tag">🏁 TARANGIRE, MANYARA, NGORONGORO, SERENGETI</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -381,17 +381,17 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/t4.jpg" class="tour-img" alt="Wildebeest River Crossing">
+                        <img src="img/sun1.jpg" class="tour-img" alt="Wildebeest River Crossing">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
-                            <span>📍 Tanzania</span>
+                            <span>📍 Luxury</span>
                         </div>
 
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>10 Days Exclusive Serengeti Safari</h5>
-                            <p class="tour-tag">🏁 TARANGIRE, MANYARA, NGORONGORO, SERENGETI</p>
+                            <h5>10 Days Exclusive Safari</h5>
+                            <p class="tour-tag">🏁 SUNSET,FAMILY, NGORONGORO, SERENGETI</p>
                             <div class="arrow-link">→</div>
                         </div>
                     </div>
@@ -402,14 +402,14 @@
                 <!-- KRUGER (EXAMPLE) -->
                 <div class="col-lg-4 col-md-6 tour-card-item kruger">
                     <div class="tour-card">
-                        <img src="img/t2.jpg" class="tour-img" alt="">
+                        <img src="img/tembo5.jpg" class="tour-img" alt="">
                         <div class="tour-tag-box">
                             <span>📅 5 Days</span>
                             <span>📍 South Africa</span>
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>5 Days Kruger Safari Experience</h5>
+                            <h5>5 Days Wild Safari Experience</h5>
                             <p class="tour-tag">🏁 KRUGER NATIONAL PARK</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -417,14 +417,14 @@
                 </div>
                 <div class="col-lg-4 col-md-6 tour-card-item kruger">
                     <div class="tour-card">
-                        <img src="img/t2.jpg" class="tour-img" alt="">
+                        <img src="img/simba.jpg" class="tour-img" alt="">
                         <div class="tour-tag-box">
                             <span>📅 5 Days</span>
                             <span>📍 South Africa</span>
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>5 Days Kruger Safari Experience</h5>
+                            <h5>5 Days Wildlife Safari Experience</h5>
                             <p class="tour-tag">🏁 KRUGER NATIONAL PARK</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -432,14 +432,14 @@
                 </div>
                 <div class="col-lg-4 col-md-6 tour-card-item kruger">
                     <div class="tour-card">
-                        <img src="img/t2.jpg" class="tour-img" alt="">
+                        <img src="img/chui7.jpg" class="tour-img" alt="">
                         <div class="tour-tag-box">
                             <span>📅 5 Days</span>
-                            <span>📍 South Africa</span>
+                            <span>📍 wildlife</span>
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>5 Days Kruger Safari Experience</h5>
+                            <h5>5 Days Wild Safari Experience</h5>
                             <p class="tour-tag">🏁 KRUGER NATIONAL PARK</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -449,7 +449,7 @@
                 <!-- GREAT MIGRATION -->
                 <div class="col-lg-4 col-md-6 tour-card-item great-migration">
                     <div class="tour-card">
-                        <img src="img/t2.jpg" class="tour-img" alt="Wildebeest River Crossing">
+                        <img src="img/nyumbu.jpg" class="tour-img" alt="Wildebeest River Crossing">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
@@ -485,7 +485,7 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item great-migration">
                     <div class="tour-card">
-                        <img src="img/photo1.jpeg" class="tour-img" alt="Calving">
+                        <img src="img/chui9.jpg" class="tour-img" alt="Calving">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 5 Days</span>
@@ -504,7 +504,7 @@
                 <!-- ZANZIBAR (PLACEHOLDER - ADD REAL CONTENT LATER) -->
                 <div class="col-lg-4 col-md-6 tour-card-item zanzibar">
                     <div class="tour-card">
-                        <img src="img/tarangire.jpg" class="tour-img" alt="">
+                        <img src="img/ndege.jpg" class="tour-img" alt="">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 8 Days</span>
@@ -512,7 +512,7 @@
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>8 Days Kilimanjaro Machame Route</h5>
+                            <h5>8 Days zanzibar Machame Route</h5>
                             <p class="tour-tag">🏁 MACHAME GATE – SUMMIT</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -522,7 +522,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 tour-card-item zanzibar">
                     <div class="tour-card">
-                        <img src="img/tarangire.jpg" class="tour-img" alt="">
+                        <img src="img/ndege1.jpg" class="tour-img" alt="">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 8 Days</span>
@@ -530,7 +530,7 @@
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>8 Days Kilimanjaro Machame Route</h5>
+                            <h5>8 Days zanzibar Machame Route</h5>
                             <p class="tour-tag">🏁 MACHAME GATE – SUMMIT</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -540,7 +540,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 tour-card-item zanzibar">
                     <div class="tour-card">
-                        <img src="img/tarangire.jpg" class="tour-img" alt="">
+                        <img src="img/ndege2.jpg" class="tour-img" alt="">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 8 Days</span>
@@ -548,7 +548,7 @@
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>8 Days Kilimanjaro Machame Route</h5>
+                            <h5>8 Days zanzibar Machame Route</h5>
                             <p class="tour-tag">🏁 MACHAME GATE – SUMMIT</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -560,7 +560,7 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item kilimanjaro">
                     <div class="tour-card">
-                        <img src="img/tarangire.jpg" class="tour-img" alt="">
+                        <img src="img/kili.jpg" class="tour-img" alt="">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 8 Days</span>
@@ -652,8 +652,8 @@
             <div class="row align-items-center mb-5">
                 <!-- Left Images -->
                 <div class="col-lg-6 position-relative">
-                    <img src="img/se.jpg" class="img-fluid rounded main-img" alt="">
-                    <img src="img/simba.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
+                    <img src="img/simba2.jpg" class="img-fluid rounded main-img" alt="">
+                    <img src="img/Nyumbu6.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
                 <!-- Right Text -->
@@ -677,7 +677,7 @@
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <!-- Right Images -->
                 <div class="col-lg-6 position-relative">
-                    <img src="img/Giraffe.jpg" class="img-fluid rounded main-img" alt="">
+                    <img src="img/twinga1.jpg" class="img-fluid rounded main-img" alt="">
                     <img src="img/Elephant-9.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
@@ -703,7 +703,7 @@
                 <!-- Left Images -->
                 <div class="col-lg-6 position-relative">
                     <img src="img/mount.jpg" class="img-fluid rounded main-img" alt="">
-                    <img src="img/photo1.jpeg" class="img-fluid rounded small-img shadow-lg" alt="">
+                    <img src="img/kili.jpg" class="img-fluid rounded small-img shadow-lg" alt="">
                 </div>
 
                 <!-- Right Text -->
@@ -767,7 +767,7 @@
             <div class="row g-4 justify-content-center">
 
                 <div class="col-lg-6">
-                    <div class="experience-card large-card" style="background-image: url('img/beach.jpg');">
+                    <div class="experience-card large-card" style="background-image: url('img/chui7.jpg');">
                         <div class="card-content">
                             <h3>Beaches</h3>
                             <p>Experience the allure of our meticulously selected beaches. With pristine sands and azure
@@ -780,7 +780,7 @@
                     <div class="row g-4">
 
                         <div class="col-sm-6">
-                            <div class="experience-card small-card" style="background-image: url('img/tembo3.jpg');">
+                            <div class="experience-card small-card" style="background-image: url('img/punda.jpg');">
                                 <div class="card-content">
                                     <h3>Big Five</h3>
                                     <p>Encounter Africa's legendary Big Five – lions, elephants, buffaloes, leopards,
@@ -854,7 +854,7 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <div class="shadow-sm" style="border-radius:10px; overflow:hidden;">
-                                    <img src="img/ngoro22.jpeg" class="img-fluid" alt="">
+                                    <img src="img/Simba-7.jpg" class="img-fluid" alt="">
                                     <div class="p-3">
                                         <h5 class="fw-bold">
                                             Serengeti vs Maasai Mara vs Kruger: Comparing Africa’s Top Safari
