--- a/exp-migration.html
+++ b/exp-migration.html
@@ -146,15 +146,15 @@
                                     <h5 class="mb-3 text-primary">Destinations</h5>
                                     <a href="destination-serengeti.html" class="dropdown-item mb-2"><i
                                             class="fa fa-map-marker-alt text-primary me-2"></i>Serengeti</a>
-                                    <a href="destination-ngorongoro.html" class="dropdown-item mb-2"><i
+                                    <a href="destination-kenya.html" class="dropdown-item mb-2"><i
                                             class="fa fa-map-marker-alt text-primary me-2"></i>Ngorongoro</a>
-                                    <a href="destination-kilimanjaro.html" class="dropdown-item mb-2"><i
+                                    <a href="destination-uganda.html" class="dropdown-item mb-2"><i
                                             class="fa fa-map-marker-alt text-primary me-2"></i>Mount Kilimanjaro</a>
-                                    <a href="destination-terangile.html" class="dropdown-item mb-2"><i
+                                    <a href="destination-rwanda.html" class="dropdown-item mb-2"><i
                                             class="fa fa-map-marker-alt text-primary me-2"></i>Tarangire</a>
-                                    <a href="destination-manyara.html" class="dropdown-item"><i
+                                    <a href="destination-southafrica.html" class="dropdown-item"><i
                                             class="fa fa-map-marker-alt text-primary me-2"></i>Lake Manyara</a>
-                                    <a href="destination-mikumi.html" class="dropdown-item"><i
+                                    <a href="destination-southafrica.html" class="dropdown-item"><i
                                             class="fa fa-map-marker-alt text-primary me-2"></i>Mikumi</a>
                                 </div>
 
